<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ButtonRecordLastLocationSql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_record_last_location_button" />

    <Button
        android:id="@+id/ButtonSqlClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_clear_button" />

    <Button
        android:id="@+id/ButtonDisplayContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_display_content" />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="#ffffff"
    android:textColor="#000000"
    android:id="@+id/editTextToDisplayDataBase"
    />

</LinearLayout>